<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/die_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner_and_button_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linear_layout"
        >

        <Spinner
            android:id="@+id/spinner_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/spinner_select_category"
            android:entries="@array/menu"
            />

        <Button
            android:id="@+id/button_submit_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit_dice_text"
            />

        <Button
            android:id="@+id/roll_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_button_text"
            />

    </LinearLayout>

            <Button
                android:id="@+id/button_result_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="0sp"
                android:layout_alignParentBottom="true"
                android:text="@string/button_show_result_view_text"
                />

            <Button
                android:id="@+id/button_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/button_done_text"
                />

</RelativeLayout>
